--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>THIS IS A TEST TITLE</title>
+    <title>贵阳市华麟学校2024届8班</title>
+    <link rel="shortcut icon" href="./ico/class-8.ico">
   </head>
   <body>
-    hello world!
+    欢迎来到华麟2024届8班!
   </body>
 </html>
