--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <!-- 标题 -->
     <title>贵阳市华麟学校2024届8班</title>
+
+    <!-- 导入ico网页头像 -->
     <link rel="shortcut icon" href="./ico/class-8.ico">
+
+    <!-- 导入样式表 -->
+    <link rel="stylesheet" href="./css/global.css">
   </head>
   <body>
-    欢迎来到华麟2024届8班!
+    
+
+    <!-- 顶部欢迎文字 -->
+    <h1 class="welcome">欢迎来到华麟2024届8班班级网!</h1>
   </body>
 </html>
