--- a/great_people.html
+++ b/great_people.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- 标题 -->
-    <title>贵阳市华麟学校2024届8班</title>
+    <title>8班"卷 王"</title>
 
     <!-- 导入ico网页头像 -->
     <link rel="shortcut icon" href="./ico/class-8.ico">
