--- a/great_people.html
+++ b/great_people.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- 标题 -->
-    <title>8班"卷 王"</title>
+    <title>八班"伟人"</title>
 
     <!-- 导入ico网页头像 -->
     <link rel="shortcut icon" href="./ico/class-8.ico">
@@ -22,6 +22,7 @@
     
 
     <!-- 顶部欢迎文字 -->
-    <h1 class="welcome">欢迎来到华麟2024届8班班级网!</h1>
+    <h1 class="welcome">这些人都是八班的卧龙凤雏</h1>
+    <div class="great_people"></div>
   </body>
 </html>
