--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 顶部工具栏 -->
     <div id="tool">
       <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
-      <h2 ><a href="./great_people.html" class="tool">"卷 王"</a></h2>
+      <h2 ><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
       <h2 ><a href="#" class="tool">任课老师</a></h2>
       <h2 ><a href="#" class="tool">首页</a></h2>
     </div>
