--- a/great_people.html
+++ b/great_people.html
@@ -23,6 +23,12 @@
 
     <!-- 顶部欢迎文字 -->
     <h1 class="welcome">这些人都是八班的卧龙凤雏</h1>
-    <div class="great_people"></div>
+    <div class="great_people">
+      <!-- <div class="people_img"></div> -->
+      <div class="introduce">
+        <h2>郑凯泽</h2>
+        <span>作为8班的卷王,他不惜自称为"牲口"也要继续卷我们,他同时担任组长,他的"敬业"让组员们为之动容(bushi),他在语文课上检查同学们的听(默)写的行为使得全班同学都不会忘记他的大缺大德</span>
+      </div>
+    </div>
   </body>
 </html>
