--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
       <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
       <h2 ><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
       <h2 ><a href="#" class="tool">任课老师</a></h2>
-      <h2 ><a href="#" class="tool">首页</a></h2>
+      <h2 ><a href="./index.html" class="tool">首页</a></h2>
     </div>
     
 
     <!-- 顶部欢迎文字 -->
     <h1 class="welcome">欢迎来到华麟2024届8班班级网!</h1>
+    <div class="under_tool">
+
+    </div>
   </body>
 </html>
