--- a/great_people.html
+++ b/great_people.html
@@ -17,7 +17,7 @@
       <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
       <h2 ><a href="./great_people.html" class="tool">"卷 王"</a></h2>
       <h2 ><a href="#" class="tool">任课老师</a></h2>
-      <h2 ><a href="#" class="tool">首页</a></h2>
+      <h2 ><a href="./index.html" class="tool">首页</a></h2>
     </div>
     
 
@@ -28,6 +28,18 @@
       <div class="introduce">
         <h2>郑凯泽</h2>
         <span>作为8班的卷王,他不惜自称为"牲口"也要继续卷我们,他同时担任组长,他的"敬业"让组员们为之动容(bushi),他在语文课上检查同学们的听(默)写的行为使得全班同学都不会忘记他的大缺大德</span>
+      </div>
+    </div>
+    <div class="great_people">
+      <div class="introduce">
+        <h2>高宇轩</h2>
+        <span>作为8班的"颜值担当",他为了不打扰同学们正常听课，不稀降低颜值<br>--来自大哥の自述</span>
+      </div>
+    </div>
+    <div class="great_people">
+      <div class="introduce">
+        <h2>龙梓豪</h2>
+        <span>是个好人<br>--来自作者の描述</span>
       </div>
     </div>
   </body>
