--- a/great_people.html
+++ b/great_people.html
@@ -15,7 +15,7 @@
     <!-- 顶部工具栏 -->
     <div id="tool">
       <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
-      <h2 ><a href="./great_people.html" class="tool">"卷 王"</a></h2>
+      <h2 ><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
       <h2 ><a href="#" class="tool">任课老师</a></h2>
       <h2 ><a href="./index.html" class="tool">首页</a></h2>
     </div>
@@ -23,24 +23,49 @@
 
     <!-- 顶部欢迎文字 -->
     <h1 class="welcome">这些人都是八班的卧龙凤雏</h1>
+
+    <!-- 郑凯泽の介绍 -->
     <div class="great_people">
+
+      <!-- 这个照片以后再整 -->
       <!-- <div class="people_img"></div> -->
+
       <div class="introduce">
         <h2>郑凯泽</h2>
         <span>作为8班的卷王,他不惜自称为"牲口"也要继续卷我们,他同时担任组长,他的"敬业"让组员们为之动容(bushi),他在语文课上检查同学们的听(默)写的行为使得全班同学都不会忘记他的大缺大德</span>
       </div>
     </div>
+
+    <!-- 高宇轩の介绍 -->
     <div class="great_people">
       <div class="introduce">
         <h2>高宇轩</h2>
         <span>作为8班的"颜值担当",他为了不打扰同学们正常听课，不稀降低颜值<br>--来自大哥の自述</span>
       </div>
     </div>
+
+    <!-- 龙梓豪の介绍 -->
     <div class="great_people">
       <div class="introduce">
         <h2>龙梓豪</h2>
         <span>是个好人<br>--来自作者の描述</span>
       </div>
     </div>
+
+    <!-- 底部工具栏 -->
+    <div class="under_tool">
+
+      <!-- 作者介绍 -->
+      <div class="author">
+        <h2>
+          由十月工作室(前与或非工作室)制作<br>(注:用爱发电,且整个工作室就一个人)
+        </h2>
+      </div>
+
+      <div >
+
+      </div>
+    </div>
+    
   </body>
 </html>
