--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
     <!-- 导入样式表 -->
     <link rel="stylesheet" href="./css/global.css">
   </head>
+
   <body>
     <!-- 顶部工具栏 -->
     <div id="tool">
-      <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
-      <h2 ><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
-      <h2 ><a href="#" class="tool">任课老师</a></h2>
-      <h2 ><a href="./index.html" class="tool">首页</a></h2>
+      <h2><a href="./index.html" class="tool">班级荣誉</a></h2>
+      <h2><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
+      <h2><a href="#" class="tool">任课老师</a></h2>
+      <h2><a href="./index.html" class="tool">首页</a></h2>
     </div>
     
 
     <!-- 顶部欢迎文字 -->
     <h1 class="welcome">欢迎来到华麟2024届8班班级网!</h1>
+
+    <!-- 底部工具栏 -->
     <div class="under_tool">
 
+      <!-- 作者介绍 -->
+      <div class="author">
+        <h2>
+          由十月工作室(前与或非工作室)制作<br>(注:用爱发电,且整个工作室就一个人)
+        </h2>
+      </div>
+
+      <div >
+
+      </div>
     </div>
+    
   </body>
 </html>
