--- a/great_people.html
+++ b/great_people.html
@@ -11,12 +11,13 @@
     <!-- 导入样式表 -->
     <link rel="stylesheet" href="./css/global.css">
   </head>
+  
   <body>
     <!-- 顶部工具栏 -->
     <div id="tool">
       <h2 ><a href="./index.html" class="tool">班级荣誉</a></h2>
       <h2 ><a href="./great_people.html" class="tool">八班"伟人"</a></h2>
-      <h2 ><a href="#" class="tool">任课老师</a></h2>
+      <h2 ><a href="./teacher.html" class="tool">任课老师</a></h2>
       <h2 ><a href="./index.html" class="tool">首页</a></h2>
     </div>
     
@@ -66,6 +67,6 @@
 
       </div>
     </div>
-    
+
   </body>
 </html>
