--- a/teacher.html
+++ b/teacher.html
@@ -3,7 +3,7 @@
   <head>
 
     <!-- 标题 -->
-    <title>贵阳市华麟学校2024届8班</title>
+    <title>贵阳市华麟学校2024届8班任课老师</title>
 
     <!-- 导入ico网页头像 -->
     <link rel="shortcut icon" href="./ico/class-8.ico">
@@ -23,7 +23,14 @@
     
 
     <!-- 顶部欢迎文字 -->
-    <h1 class="welcome">欢迎来到华麟2024届8班班级网!</h1>
+    <h1 class="welcome">八班的任课老师</h1>
+
+    <div class="teacher">
+      <div class="introduce">
+        <h2>语文:周景牧</h2>
+        <span></span>
+      </div>
+    </div>
 
     <!-- 底部工具栏 -->
     <div class="under_tool">
